# cargo-pvm-contract

./: Cargo.toml  README.md  next-prompt.txt
.github/workflows/: ci.yml
crates/cargo-pvm-contract/: Cargo.toml
crates/cargo-pvm-contract-builder/: Cargo.toml
crates/cargo-pvm-contract-builder/src/: lib.rs
crates/cargo-pvm-contract/src/: main.rs  scaffold.rs
crates/cargo-pvm-contract/templates/examples/: Fibonacci.sol
crates/cargo-pvm-contract/templates/examples/fibonacci/: fibonacci_no_alloc.rs
crates/cargo-pvm-contract/templates/examples/mytoken/: mytoken_no_alloc.rs  mytoken_with_alloc.rs
crates/cargo-pvm-contract/templates/scaffold/: blank_sol.sol.txt  build.rs.txt  cargo_toml.txt  contract_alloc.rs.txt  contract_blank_alloc.rs.txt  contract_no_alloc.rs.txt
crates/cargo-pvm-contract/tests/: test_cmd.rs
