[package]
name = "cargo-pvm-contract"
description = "A Cargo subcommand to create and build PVM smart contracts."
repository = "https://github.com/paritytech/cargo-pvm-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = true
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
]

[[bin]]
name = "cargo-pvm-contract"
path = "src/main.rs"

[dependencies]
polkavm-linker = "0.30.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7"
log = "0.4"
env_logger = "0.11"
toml_edit = "0.22"
